--- a/src/App.css
+++ b/src/App.css
@@ -12,4 +12,31 @@
 main {
   height: 100vh;
   width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+main .realBody {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  justify-content: left;
+  align-items: left;
+  padding: 30px 50px 0 50px;
+}
+
+/*main .realBody .activeFoldersContainer article {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  justify-content: left;
+  align-items: left;
+}*/
+
+main .realBody .activeFoldersContainer {
+  display: flex;
+  flex-direction: column;
+  row-gap: 15px;
 }
