--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -28,7 +28,7 @@ header .mainpanel {
   align-items: center;
   width: 100%;
   height: 100%;
-  padding-right: 50px;
+  padding: 0 50px;
 }
 
 header .mainpanel .avatar {
