--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ main {
   flex-direction: row;
 }
 
-main .realBody {
+main .activeFolderBody {
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -26,7 +26,7 @@ main .realBody {
   padding: 30px 50px 0 50px;
 }
 
-/*main .realBody .activeFoldersContainer article {
+/*main .activeFolderBody .activeFoldersContainer article {
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -35,8 +35,47 @@ main .realBody {
   align-items: left;
 }*/
 
-main .realBody .activeFoldersContainer {
+main .activeFolderBody .activeFoldersContainer {
   display: flex;
   flex-direction: column;
   row-gap: 15px;
+}
+
+main .activeFolderBody .buttonsInputsSearchBarContainer {
+  height: 50px;
+  width: 100%;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  margin-top: 30px;
+}
+
+main .activeFolderBody .buttonsInputsSearchBarContainer button {
+  height: 100%;
+  width: 320px;
+  box-shadow: 0 8px 16px rgb(208, 45, 28, 0.2);
+}
+
+main .activeFolderBody .buttonsInputsSearchBarContainer .separator {
+  width: 1px;
+  height: 100%;
+  background-color: #cccdcd;
+  margin: 0 15px;
+}
+
+main .activeFolderBody .buttonsInputsSearchBarContainer .searchInput {
+  width: 400px;
+  height: 100%;
+  background-color: var(--sec-bg-color);
+  border-radius: 4px;
+  border: 1px solid #cbcbcb;
+}
+
+main .activeFolderBody .buttonsInputsSearchBarContainer .select {
+  width: 400px;
+  height: 100%;
+  background-color: var(--sec-bg-color);
+  border-radius: 4px;
+  border: 1px solid #cbcbcb;
+  margin-left: auto;
 }
