--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
   --main-border-color: #cbcbcb;
   --main-orange-color: #d02d1c;
   --main-text-color: #020611;
+  --sec-text-color: #60626c;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
