--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,15 @@
 #root {
   /*max-width: 1280px;*/
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   margin: 0 auto;
-  text-align: center;
   background-color: var(--main-bg-color);
   display: flex;
   flex-direction: column;
 }
 
 main {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -44,7 +43,7 @@ main .activeFolderBody .activeFoldersContainer {
 main .activeFolderBody .buttonsInputsSearchBarContainer {
   height: 50px;
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   display: flex;
   flex-direction: row;
   margin-top: 30px;
@@ -54,6 +53,7 @@ main .activeFolderBody .buttonsInputsSearchBarContainer button {
   height: 100%;
   width: 320px;
   box-shadow: 0 8px 16px rgb(208, 45, 28, 0.2);
+  cursor: pointer;
 }
 
 main .activeFolderBody .buttonsInputsSearchBarContainer .separator {
@@ -69,6 +69,11 @@ main .activeFolderBody .buttonsInputsSearchBarContainer .searchInput {
   background-color: var(--sec-bg-color);
   border-radius: 4px;
   border: 1px solid #cbcbcb;
+  padding: 0 20px;
+}
+
+main .activeFolderBody .buttonsInputsSearchBarContainer :focus {
+  outline: 1px solid var(--main-orange-color);
 }
 
 main .activeFolderBody .buttonsInputsSearchBarContainer .select {
@@ -78,4 +83,5 @@ main .activeFolderBody .buttonsInputsSearchBarContainer .select {
   border-radius: 4px;
   border: 1px solid #cbcbcb;
   margin-left: auto;
+  padding: 0 20px;
 }
