--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -1,6 +1,8 @@
 header {
   height: 100px;
   width: 100%;
+  min-height: 100px;
+  flex-shrink: 0;
   background-color: var(--sec-bg-color);
   display: flex;
   flex-direction: row;
