--- a/src/style/MainNavBar.css
+++ b/src/style/MainNavBar.css
@@ -71,6 +71,9 @@ nav .menuSeparators {
 .menuItemsContainer .menuItem img {
   margin-left: 18px;
   margin-right: 17px;
+  /* temporary */
+  width: 23px;
+  height: 21px;
 }
 
 .menuItemsContainer .menuItem.active {
