--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,8 @@
 }
 
 main {
-  height: 100%;
   width: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: row;
 }
@@ -18,8 +18,8 @@ main {
 main .activeFolderBody {
   display: flex;
   flex-direction: column;
-  height: 100%;
   width: 100%;
+  height: 100%;
   justify-content: left;
   align-items: left;
   padding: 30px 50px 0 50px;
@@ -43,7 +43,7 @@ main .activeFolderBody .activeFoldersContainer {
 main .activeFolderBody .buttonsInputsSearchBarContainer {
   height: 50px;
   width: 100%;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   display: flex;
   flex-direction: row;
   margin-top: 30px;
