--- a/src/pages/Users.css
+++ b/src/pages/Users.css
@@ -10,37 +10,23 @@
 
 main {
   width: 100%;
-  min-height: 100vh;
+  min-height: calc(100vh - 100px);
+  height: fit-content;
   display: flex;
   flex-direction: row;
 }
 
-main .activeFolderBody {
+main .usersBody {
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 100%;
   justify-content: left;
   align-items: left;
-  padding: 30px 50px 0 50px;
+  padding: 30px 50px 2rem 50px;
 }
 
-/*main .activeFolderBody .activeFoldersContainer article {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  width: 100%;
-  justify-content: left;
-  align-items: left;
-}*/
-
-main .activeFolderBody .activeFoldersContainer {
-  display: flex;
-  flex-direction: column;
-  row-gap: 15px;
-}
-
-main .activeFolderBody .buttonsInputsSearchBarContainer {
+main .usersBody .buttonsInputsSearchBarContainer {
   height: 50px;
   width: 100%;
   margin-bottom: 20px;
@@ -49,39 +35,52 @@ main .activeFolderBody .buttonsInputsSearchBarContainer {
   margin-top: 30px;
 }
 
-main .activeFolderBody .buttonsInputsSearchBarContainer button {
+main .usersBody .buttonsInputsSearchBarContainer button {
   height: 100%;
   width: 320px;
   box-shadow: 0 8px 16px rgb(208, 45, 28, 0.2);
   cursor: pointer;
 }
 
-main .activeFolderBody .buttonsInputsSearchBarContainer .separator {
+main .usersBody .buttonsInputsSearchBarContainer .separator {
   width: 1px;
   height: 100%;
   background-color: #cccdcd;
   margin: 0 15px;
 }
 
-main .activeFolderBody .buttonsInputsSearchBarContainer .searchInput {
+main .usersBody .buttonsInputsSearchBarContainer .searchInput {
   width: 400px;
   height: 100%;
   background-color: var(--sec-bg-color);
   border-radius: 4px;
   border: 1px solid #cbcbcb;
   padding: 0 20px;
+  margin-left: auto;
 }
 
-main .activeFolderBody .buttonsInputsSearchBarContainer :focus {
+main .usersBody .buttonsInputsSearchBarContainer :focus {
   outline: 1px solid var(--main-orange-color);
 }
 
-main .activeFolderBody .buttonsInputsSearchBarContainer .select {
+main .usersBody .buttonsInputsSearchBarContainer .select {
   width: 400px;
   height: 100%;
   background-color: var(--sec-bg-color);
   border-radius: 4px;
   border: 1px solid #cbcbcb;
-  margin-left: auto;
   padding: 0 20px;
+  margin-left: 20px;
+}
+
+main .usersBody .usersCardsContainer {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+}
+
+main .usersBody .usersCardsContainer .rowCardsContainer {
+  display: flex;
+  flex-direction: row;
+  column-gap: 20px;
 }
