--- a/src/style/Folders/ActiveFolderBar.css
+++ b/src/style/Folders/ActiveFolderBar.css
@@ -1,14 +1,22 @@
 .activeFolderContainer {
   background-color: var(--sec-bg-color);
   width: 100%;
-  height: 110px;
+  height: 120px;
   display: flex;
-  max-height: 110px;
+  max-height: 120px;
   flex-direction: row;
+  align-items: center;
   border: 1px solid var(--main-border-color);
   border-radius: 10px;
-  padding: 20px;
+  padding: 25px 20px;
+  transition: all 0.5s ease-out;
   /*opacity: 0.9;*/
+}
+
+.activeFolderContainer.shadow {
+  box-shadow: 0 4px 8px rgba(163, 163, 163, 0.2),
+    0 8px 16px rgba(202, 202, 202, 0.2);
+  border-color: #fff;
 }
 
 .activeFolderContainer:hover {
@@ -19,6 +27,18 @@
   cursor: pointer;
 }
 
+.activeFolderContainer:hover {
+  background-color: #fff6f5;
+  border: 1px solid #cd8981;
+  box-shadow: 0 4px 8px rgba(210, 52, 36, 0.22),
+    0 8px 16px rgb(208, 45, 28, 0.08);
+  cursor: pointer;
+}
+
+.activeFolderContainer:hover .barContainer {
+  background-color: #f4e5e3;
+}
+
 .activeFolderContainer:hover .folderIconContainer {
   background: radial-gradient(
       circle at 0%,
@@ -27,6 +47,7 @@
     ),
     var(--main-orange-color);
   border: 2px solid #a0231b;
+  transition: all 0.5s ease-out;
 }
 
 .activeFolderContainer:hover .folderIconContainer svg path {
@@ -70,8 +91,8 @@
   transform: translateY(-6px);
 }
 
-.activeFolderContainer .colMainDatasContainer .TYminus3 {
-  transform: translateY(-3px);
+.activeFolderContainer .colMainDatasContainer .TYminus4 {
+  transform: translateY(-4px);
 }
 
 .activeFolderContainer .separator {
