--- a/src/style/Folders/StatBarSuccessRate.css
+++ b/src/style/Folders/StatBarSuccessRate.css
@@ -9,7 +9,8 @@
 }
 
 .barContainer .greenBar {
-  width: 70%;
+  /*width: 70%;*/
   height: 100%;
   background-color: #30dfab;
+  border-radius: 0 10px 10px 0;
 }
