--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,11 @@
   --selected-bg-color: #fff2f1;
   --main-border-color: #cbcbcb;
   --main-orange-color: #d02d1c;
+  --secondary-orange-color: #e0514c;
   --main-text-color: #020611;
   --sec-text-color: #60626c;
   --grey-lightbuttons-border-color: #c6c8ca;
+  --main-bg-inputtext-color: #f3f3f3;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -63,8 +65,6 @@ body {
   justify-content: center;
   min-height: 100vh;
   width: 100%;
-  --main-bg-color: #f1f2f2;
-  --sec-bg-color: #ffffff;
   background-color: var(--main-bg-color);
 }
 
