--- a/src/index.css
+++ b/src/index.css
@@ -88,6 +88,7 @@ h1 {
   font-optical-sizing: auto;
   font-weight: 700;
   font-style: normal;
+  cursor: pointer;
 }
 
 .mainButton:hover {
@@ -109,4 +110,5 @@ h1 {
   font-optical-sizing: auto;
   font-weight: 700;
   font-style: normal;
+  cursor: pointer;
 }
