--- a/src/pages/Tests.css
+++ b/src/pages/Tests.css
@@ -32,25 +32,72 @@ main .testsBody {
   justify-content: space-between;
 }
 
+.testsBody .tableContainer {
+  display: flex;
+  flex-direction: column;
+}
+
 .testsBody table {
   margin-top: 20px;
   border: 1px solid #c3c4c4;
   background-color: white;
-  border-radius: 10px 10px 0 0;
   border-collapse: collapse;
+  overflow: hidden;
 }
 
-.testsBody table tr {
-  height: 45px;
-  border-bottom: 1px solid #cbcbcb;
-}
-
-.testsBody table td {
+.testsBody table .customCheckbox {
+  width: 16px;
+  height: 16px;
   display: flex;
   justify-content: center;
   align-items: center;
+  border: 1px solid #cdcdcd;
+  border-radius: 4px;
+  background-color: #eaeaea;
 }
 
-.testsBody table tr:nth-child(even) {
+.testsBody table tr {
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+}
+
+.testsBody table tbody tr:not(:last-child),
+.testsBody table thead tr {
+  border-bottom: 1px solid rgba(203, 203, 203, 0.5);
+}
+
+.testsBody table td,
+th {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+  padding: 0 20px;
+  flex: 1 1 100%;
+}
+
+.testsBody table tbody tr:nth-child(even),
+.testsBody table thead tr:first-child {
   background-color: #fbfbfb;
+}
+
+.testsBody .tableBottomContainer {
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+  background-color: #fbfbfb;
+  border-radius: 0 0 10px 10px;
+  border-width: 0 1px 1px 1px;
+  border-style: solid;
+  border-color: #c3c4c4;
+}
+
+.testsBody table thead tr th.checkboxCell,
+.testsBody table tbody tr td.checkboxCell {
+  width: 50px;
+  flex: 0 0 50px;
+  padding: 0;
 }
