table borders fixed

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   --sec-bg-color: #ffffff;
   --selected-bg-color: #fff2f1;
   --main-border-color: #cbcbcb;
+  --sec-border-color: #c3c4c4;
   --main-orange-color: #d02d1c;
   --secondary-orange-color: #e0514c;
   --main-text-color: #020611;
