--- a/src/pages/Tests.css
+++ b/src/pages/Tests.css
@@ -39,12 +39,13 @@ main .testsBody {
 
 .testsBody table {
   margin-top: 20px;
-  border: 1px solid #c3c4c4;
+  /*border: 1px solid var(--sec-border-color);*/
   background-color: white;
   border-collapse: collapse;
   overflow: hidden;
   border-radius: 10px 10px 0 0;
   padding: 0;
+  border: none;
 }
 
 .testsBody table .customCheckbox {
@@ -59,14 +60,22 @@ main .testsBody {
 }
 
 .testsBody table tr {
-  height: 50px;
+  height: 45px;
   display: flex;
   flex-direction: row;
 }
 
-.testsBody table tbody tr:not(:last-child),
 .testsBody table thead tr {
+  border-radius: 10px 10px 0 0;
+  border-bottom: 1px solid #7b7e86;
+}
+
+.testsBody table tbody tr:not(:last-child) {
   border-bottom: 1px solid rgba(203, 203, 203, 0.5);
+}
+
+.testsBody table tbody tr:last-child {
+  border-bottom: 1px solid var(--sec-border-color);
 }
 
 .testsBody table td,
@@ -79,13 +88,18 @@ main .testsBody {
   flex: 1 1 100%;
 }
 
+.testsBody table td:not(:last-child),
+.testsBody table th:not(:last-child) {
+  border-right: 1px solid rgba(203, 203, 203, 0.5);
+}
+
 .testsBody table tbody tr:nth-child(even),
 .testsBody table thead tr:first-child {
   background-color: #fbfbfb;
 }
 
-.testsBody .tableBottomContainer {
-  height: 50px;
+.testsBody .tableFooterContainer {
+  height: 45px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -94,18 +108,35 @@ main .testsBody {
   border-radius: 0 0 10px 10px;
   border-width: 0 1px 1px 1px;
   border-style: solid;
-  border-color: #c3c4c4;
+  border-color: var(--sec-border-color);
 }
 
 .testsBody table thead tr th.checkboxCell,
 .testsBody table tbody tr td.checkboxCell {
-  width: 50px;
-  flex: 0 0 50px;
+  width: 45px;
+  flex: 0 0 45px;
   padding: 0;
 }
 
-/*table thead tr {
-  border: 2px solid orange;
-  border-radius: 10px 10px 0 0;
-  overflow: hidden;
-}*/
+.testsBody table tbody tr td:first-child {
+  border-left: 1px solid var(--sec-border-color);
+}
+
+.testsBody table tbody tr td:last-child {
+  border-right: 1px solid var(--sec-border-color);
+}
+
+.testsBody table thead tr th {
+  border-top: 1px solid var(--sec-border-color);
+  font-weight: 600;
+}
+
+.testsBody table thead tr th:first-child {
+  border-left: 1px solid var(--sec-border-color);
+  border-radius: 10px 0 0 0;
+}
+
+.testsBody table thead tr th:last-child {
+  border-right: 1px solid var(--sec-border-color);
+  border-radius: 0 10px 0 0;
+}
