--- a/src/pages/NewUser.css
+++ b/src/pages/NewUser.css
@@ -33,7 +33,7 @@ main .userFormContainer {
   border: 1px solid var(--main-border-color);
   border-radius: 10px;
   overflow: hidden;
-  margin-top: 30px;
+  margin-top: 28px;
 }
 
 .userFormContainer .formHeader {
@@ -92,6 +92,10 @@ main .userFormContainer {
   padding-bottom: 1px;
 }
 
+.userFormContainer .formHeader .formStep .circle.pdr1 {
+  padding-right: 1px;
+}
+
 .userFormContainer .formHeader .formStep .circle.color1 {
   border: 2px solid #fff;
 }
@@ -111,7 +115,7 @@ main .userFormContainer {
 }
 
 .userFormContainer .formBody label {
-  font-weight: 500;
+  font-weight: 600;
 }
 
 .userFormContainer .formBody input[type="text"] {
@@ -132,7 +136,7 @@ main .userFormContainer {
   width: 50%;
   display: flex;
   flex-direction: column;
-  row-gap: 25px;
+  row-gap: 28px;
 }
 
 .userFormContainer .formBody .labelInputGroup {
@@ -146,7 +150,7 @@ main .userFormContainer {
   width: 50%;
   display: flex;
   flex-direction: column;
-  row-gap: 25px;
+  row-gap: 28px;
 }
 
 .userFormContainer .formBody .buttonsGroup {
