--- a/src/style/MainNavBar.css
+++ b/src/style/MainNavBar.css
@@ -56,7 +56,7 @@ nav .menuSeparators {
   display: flex;
   align-items: center;
   font-size: 16px;
-  font-family: "Manrope", sans-serif;
+  /*font-family: "Manrope", sans-serif;*/
   font-optical-sizing: auto;
   font-weight: 600;
   font-style: normal;
