--- a/src/style/UserCard.css
+++ b/src/style/UserCard.css
@@ -32,6 +32,7 @@ article.userCard:hover {
 article.userCard .leftSide {
   display: flex;
   flex-direction: column;
+  row-gap: 5px;
 }
 
 article.userCard .leftSide .tagSuperHero {
@@ -67,6 +68,7 @@ article.userCard .leftSide .tagHero {
 }
 
 article.userCard .leftSide .fs14 {
+  font-family: "Open Sans", sans-serif;
   font-size: 14px;
   font-style: italic;
   font-weight: 400;
