--- a/src/index.css
+++ b/src/index.css
@@ -89,9 +89,10 @@ h1 {
   font-family: Inter, sans-serif;
   /*font-family: "Manrope", sans-serif;*/
   font-optical-sizing: auto;
-  font-weight: 700;
   font-style: normal;
   cursor: pointer;
+  font-size: 16px;
+  font-weight: 600;
 }
 
 .mainButton:hover {
@@ -112,7 +113,8 @@ h1 {
   /*font-family: "Manrope", sans-serif;*/
   font-family: Inter, sans-serif;
   font-optical-sizing: auto;
-  font-weight: 700;
+  font-size: 16px;
+  font-weight: 600;
   font-style: normal;
   cursor: pointer;
 }
