--- a/src/pages/NewUser.css
+++ b/src/pages/NewUser.css
@@ -90,6 +90,8 @@ main .userFormContainer {
   width: 29px;
   height: 29px;
   padding-bottom: 1px;
+  font-size: 16px;
+  font-weight: 600;
 }
 
 .userFormContainer .formHeader .formStep .circle.pdr1 {
@@ -109,22 +111,23 @@ main .userFormContainer {
 }
 
 .userFormContainer .formBody {
-  padding: 40px 50px 50px 50px;
+  padding: 45px 50px 50px 50px;
   width: 100%;
   display: flex;
 }
 
 .userFormContainer .formBody label {
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .userFormContainer .formBody input[type="text"] {
   width: 560px;
-  height: 40px;
+  height: 45px;
   background-color: var(--main-bg-inputtext-color);
   border-radius: 4px;
   border: 1px solid #cbcbcb;
   padding: 0 20px;
+  font-size: 16px;
 }
 
 .userFormContainer .formBody input[type="text"]:focus {
@@ -163,7 +166,9 @@ main .userFormContainer {
 .userFormContainer .formBody .buttonsGroup button {
   display: flex;
   flex: 1 1 50%;
-  height: 40px;
+  height: 45px;
   justify-content: center;
   align-items: center;
+  border-radius: 4px;
+  font-weight: 600;
 }
